<resources>
    <string name="app_name">PhotoGuid</string>
    <string name="title_activity_maps">Map</string>
    <string name="info">Info</string>
    <string name="wybierz">Wybierz</string>
    <string name="trasa">Trasa</string>
    <string name="pokaz">Pokaż</string>
    <string name="zdjecie">Zdjęcie</string>
    <string name="menu">Menu</string>
    <string name="ok">OK</string>
    <string name="wsp_czesne_zdj_cie_zabytka">Współczesne zdjęcie zabytka</string>
    <string name="krzy_yk_zamykaj_cy_apk">Krzyżyk, zamykający apkę</string>
    <string name="x">X</string>
    <string name="brak_opisu">Brak opisu</string>
    <string name="brak_nag_wka">Brak nagłówka</string>
    <string name="ikonka_aplikacji">Ikonka aplikacji</string>
    <string name="odkryte_zabytki">Zabytki</string>
    <string name="mapa">Mapa</string>
    <string name="informacja">Informacja</string>
    <string name="tlo">Tlo</string>
    <string name="opisApp1">
        To jest aplkacja, która pozwoli Ci na chwilę okazać się w przeszłości.
        Możesz zobaczyć jak wyglądały różne zabytki kilkadziesiąt, a nawet kilkaset lat temu!
    </string>
    <string name="opisApp2">
        Aby to zrobić, znajdz najbliższą do Ciebie pozycję na mapie i w drogę!
        Jak tylko będziesz we właściwym miejscu, będziesz mógł zobaczyć zdjęcie,
        które w tym samym miejscu inna osoba zrobiła wiele lat temu.
    </string>
    <string name="opisApp3">
        Możesz zrobić zdjęcie tego zabytku i porównać z tym historycznym.
        Wszystkie odkryte zabytki są zapisywane, masz do nich dostęp w każdej chwili.
    </string>
    <string name="opisApp4">
        No cóż… Jesteś gotowy na podróż w przeszłość?
    </string>
    <string name="polska">Polska</string>
    <string name="kraje">Kraje</string>
    <string name="miasta">Miasta</string>
    <string name="zabytki">Zabytki</string>
    <string name="title_activity_maps_show">Map</string>
    <string name="zdj_cie_elementu_grida">Zdjęcie elementu grida</string>
    <string name="historyczne_zdj_cie_z_bazy_danych">Historyczne zdjęcie z bazy danych</string>
    <string name="por_wnaj">Porównaj</string>
    <string name="szczeg_y">Szczegóły</string>
    <string name="toast_na_miejscu">Jesteśmy na miejscu i możemy zrobić zdjęcie!</string>
    <string name="wskazowka_naglowek">Wskazówka</string>
    <string name="wskazowka_tresc_poziomo">Dane zdjęcie należy wykonać, trzymając urządzenie poziomo.</string>
    <string name="wskazowka_tresc_pionowo">Dane zdjęcie należy wykonać, trzymając urządzenie pionowo.</string>
    <string name="nasze_zdj_cie_budynka">Nasze zdjęcie budynka</string>
    <string name="widok_z_kamery">Widok z kamery</string>
    <string name="permission_text">Dana aplikacja potrzebuje dostępu do kamery.</string>
    <string name="double_click_on_exit_text">Kliknij jeszcze raz aby wyłączyć aplikację!</string>
    <string name="w_asne_zdj_cie">Własne zdjęcie</string>
    <string name="poczatek_data_nowe_zdjecie">Zdjęcie z dnia </string>
    <string name="poczatek_data_stare_zdjecie">Zdjęcie z lat </string>
    <string name="nowe_zdjecie">Nowe</string>
    <string name="stare_zdjecie">stare zdjecie</string>

</resources>

