<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E28DAFF3"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="#080836"
        android:textSize="50sp"
        android:textStyle="bold|italic" />

    <LinearLayout
        android:id="@+id/main_icon_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15sp"
            android:contentDescription="@string/ikonka_aplikacji"
            android:src="@drawable/default_monument" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_odkryte_zabytki"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:background="@drawable/menu_button_background"
            android:text="@string/odkryte_zabytki"
            android:textColor="#DDD3D3F5" />

        <Button
            android:id="@+id/btn_mapa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:background="@drawable/menu_button_background"
            android:text="@string/mapa"
            android:textColor="#DDD3D3F5" />

        <Button
            android:id="@+id/btn_informacja"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/menu_button_background"
            android:text="@string/informacja"
            android:textColor="#DDD3D3F5" />
    </LinearLayout>
</LinearLayout>