<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/tlo"
        android:scaleType="centerCrop"
        android:src="@drawable/map_background" />

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10sp"
        android:orientation="vertical"
        android:paddingStart="10sp"
        android:paddingEnd="10sp"
        tools:context=".InfoActivity">

        <TextView
            android:id="@+id/textNaglowekApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:layout_marginBottom="10sp"
            android:background="@drawable/round_button_background"
            android:paddingStart="20sp"
            android:paddingTop="15sp"
            android:paddingEnd="20sp"
            android:paddingBottom="15sp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/colorTextLight"
            android:textSize="30sp"
            android:textStyle="bold|italic" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textOpisApp1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10sp"
                    android:background="@drawable/rounded_corner_popup"
                    android:padding="15sp"
                    android:text="@string/opisApp1"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textOpisApp2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10sp"
                    android:background="@drawable/rounded_corner_popup"
                    android:padding="15sp"
                    android:text="@string/opisApp2"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textOpisApp3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10sp"
                    android:background="@drawable/rounded_corner_popup"
                    android:padding="15sp"
                    android:text="@string/opisApp3"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textOpisApp4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_corner_popup"
                    android:padding="15sp"
                    android:text="@string/opisApp4"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:layout_marginBottom="10sp"
                    android:textSize="20sp" />
            </LinearLayout>

        </ScrollView>
    </LinearLayout>
</FrameLayout>