<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mapa"
    tools:context=".MapsShowActivity">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <Button
        android:id="@+id/btn_menu"
        android:background="@drawable/rounded_corners_button"
        style="@android:style/Widget.Button"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5pt"
        android:text="@string/menu"
        android:textColor="@color/colorTextLight" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

        <Button
            android:id="@+id/btn_info"
            style="@android:style/Widget.Button"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="start"
            android:layout_marginStart="10pt"
            android:layout_marginEnd="2.5pt"
            android:layout_marginBottom="5pt"
            android:background="@drawable/rounded_corners_button"
            android:layout_alignParentStart="true"
            android:textColor="@color/colorTextLight"
            android:text="@string/info"
            android:visibility="invisible" />

        <Button
            android:id="@+id/btn_szczegoly"
            style="@android:style/Widget.Button"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="5pt"
            android:layout_marginEnd="5pt"
            android:layout_marginBottom="5pt"
            android:background="@drawable/rounded_corners_button"
            android:text="@string/szczeg_y"
            android:textColor="@color/colorTextLight"
            android:visibility="invisible" />

        <Button
            android:id="@+id/btn_trasa"
            style="@android:style/Widget.Button"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:layout_marginStart="2.5pt"
            android:layout_marginEnd="10pt"
            android:layout_marginBottom="5pt"
            android:background="@drawable/rounded_corners_button"
            android:textColor="@color/colorTextLight"
            android:text="@string/wybierz"
            android:visibility="invisible" />
    </RelativeLayout>
</FrameLayout>
