<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/tlo"
        android:scaleType="centerCrop"
        android:src="@drawable/map_background" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="10dp"
        tools:context=".LoadingActivity">


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:layout_marginBottom="10sp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="#080836"
            android:textSize="50sp"
            android:textStyle="bold|italic" />

        <LinearLayout
            android:id="@+id/main_icon_layout"
            android:layout_width="250sp"
            android:layout_height="250sp"
            android:layout_marginTop="30sp"
            android:layout_marginBottom="30sp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15sp"
                android:contentDescription="@string/ikonka_aplikacji"
                android:src="@drawable/default_monument" />
        </LinearLayout>


        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="144dp"
            android:layout_height="167dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:indeterminate="true"
            android:indeterminateTint="#E1070746"
            android:indeterminateTintMode="src_atop"
            android:visibility="visible" />

    </LinearLayout>
</FrameLayout>