<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/tlo"
        android:scaleType="centerCrop"
        android:src="@drawable/map_background" />

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="10sp"
        android:paddingEnd="10sp"
        tools:context=".ObservationPointDetailsActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/monumentName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|top"
                    android:layout_marginBottom="10sp"
                    android:background="@drawable/round_button_background"
                    android:paddingStart="20sp"
                    android:paddingTop="15sp"
                    android:paddingEnd="20sp"
                    android:paddingBottom="15sp"
                    android:text="@string/brak_nag_wka"
                    android:textAlignment="center"
                    android:textColor="@color/colorTextLight"
                    android:textSize="30sp"
                    android:layout_marginTop="10sp"
                    android:textStyle="bold|italic" />

                <TextView
                    android:id="@+id/observationPointComment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10sp"
                    android:background="@drawable/rounded_corner_popup"
                    android:padding="15sp"
                    android:text="@string/brak_opisu"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="10sp"
                    android:background="@drawable/rounded_corner_popup"
                    android:orientation="vertical"
                    android:padding="10sp">

                    <ImageView
                        android:id="@+id/observationPointOldImage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5sp"
                        android:contentDescription="@string/historyczne_zdj_cie_z_bazy_danych"
                        android:src="@drawable/default_monument" />

                    <TextView
                        android:id="@+id/observationPointOldYear"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5sp"
                        android:text="@string/brak_opisu"
                        android:textAlignment="center"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        android:textStyle="italic" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/rounded_corner_popup"
                    android:orientation="vertical"
                    android:padding="10sp">

                    <ImageView
                        android:id="@+id/observationPointNewImage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10sp"
                        android:contentDescription="@string/w_asne_zdj_cie"
                        android:src="@drawable/default_monument" />

                    <TextView
                        android:id="@+id/observationPointNewYear"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="15sp"
                        android:text="@string/brak_opisu"
                        android:textAlignment="center"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        android:textStyle="italic" />
                </LinearLayout>

                <Button
                    android:id="@+id/porownaj"
                    style="@android:style/Widget.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5pt"
                    android:layout_marginBottom="15sp"
                    android:background="@drawable/rounded_corners_button"
                    android:text="@string/por_wnaj"
                    android:textColor="@color/colorTextLight" />

            </LinearLayout>

        </ScrollView>
    </LinearLayout>
</FrameLayout>